# CASMIM

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  llms.txt  main.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: indexnow.yml
sars_sim/: __init__.py  engine.py  engine_numba.py  models.py  policies.py  statistics.py  world.py
sars_sim/gui/: __init__.py  charts.py  controls.py  lattice_view.py  main_window.py  status_bar.py
