[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "casmim-sars-simulation"
version = "2.0.0"
description = "CASMIM SARS Epidemic Dynamics Simulation with Public Health Policy Assessments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chung-Yuan Huang"},
    {name = "Chuen-Tsai Sun"},
    {name = "Ji-Lung Hsieh"},
    {name = "Yi-Ming Arthur Chen"},
    {name = "Holin Lin"},
]
keywords = [
    "SARS",
    "epidemic simulation",
    "cellular automata",
    "social mirror identity",
    "small-world network",
    "public health policy",
    "SEIR model",
    "CASMIM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "pyqtgraph>=0.13",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/canslab1/casmim-sars-simulation"

[project.scripts]
casmim-sars = "main:main"

[tool.setuptools.packages.find]
include = ["sars_sim*"]
