[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casmim-sars-simulation"
version = "2.0.0"
description = "CASMIM SARS Epidemic Dynamics Simulation with Public Health Policy Assessments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Chung-Yuan Huang", email = "gscott@mail.cgu.edu.tw"},
    {name = "Chuen-Tsai Sun"},
    {name = "Ji-Lung Hsieh"},
    {name = "Yi-Ming Arthur Chen"},
    {name = "Holin Lin"},
]
keywords = [
    "SARS",
    "epidemic simulation",
    "cellular automata",
    "social mirror identity",
    "small-world network",
    "public health policy",
    "SEIR model",
    "CASMIM",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "pyqtgraph>=0.13",
    "openpyxl>=3.1",
    "numba>=0.60.0",
]

[project.urls]
Homepage = "https://github.com/canslab1/CASMIM"
Repository = "https://github.com/canslab1/CASMIM"
Issues = "https://github.com/canslab1/CASMIM/issues"

[project.scripts]
casmim-sars = "main:main"

[tool.setuptools.packages.find]
include = ["sars_sim*"]
